k8s/namespace.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: poc-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: vitorfurini/spring-boot-app:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: h2-storage
              mountPath: /data/h2
      volumes:
        - name: h2-storage
          persistentVolumeClaim:
            claimName: h2-pvc
